--- a/lojavirtiual/.settings/org.eclipse.wst.common.component
+++ b/lojavirtiual/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="lojavirtiual">
+        
+    <wb-module deploy-name="clientes-api">
+                
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="lojavirtiual"/>
-        <property name="java-output-path" value="/lojavirtiual/target/classes"/>
+                
+        <property name="java-output-path" value="/clientes-api/target/classes"/>
+        <property name="context-root" value="clientes-api"/>
+            
     </wb-module>
+    
 </project-modules>
